# openapi/sdxl_worker_api.yaml
@@ -248,7 +248,15 @@ components:
               default: false
               example: false
             
-
+    ImageInput:
+      type: object
+      required:
+        - source
+      properties:
+        source:
+          type: string
+          description: either url or base64 string
+            
     ControlNetParams:
       type: object
       required:
@@ -261,8 +269,8 @@ components:
           default: false
         guide_image:
           type: string
-          description: Control image as URL or base64 encoded string
-          example: "data:image/jpeg;base64,/9j/4AAQSkZJRgABA..."
+          description: Control image 
+          $ref: '#/components/schemas/ImageInput'
         needs_preprocess:
           type: boolean
           default: false
@@ -333,13 +341,11 @@ components:
         - mask_image
       properties:
         starting_image:
-          type: string
-          description: Base64 encoded source image for inpainting
-          format: byte
+          $ref: '#/components/schemas/ImageInput'
+          description: Starting image for inpaint  
         mask_image:
-          type: string
-          description: Base64 encoded mask image (black = keep, white = inpaint)
-          format: byte
+          $ref: '#/components/schemas/ImageInput'
+          description: Mask image for inpaint (black = keep, white = inpaint)
         use_controlnet_union_inpaint:
           type: boolean
           description: Whether to use ControlNet Union inpainting mode
@@ -351,9 +357,8 @@ components:
         - starting_image
       properties:
         starting_image:
-          type: string
-          description: Base64 encoded starting image for image-to-image generation
-          format: byte
+          $ref: '#/components/schemas/ImageInput'
+          description: Starting image for image-to-image generation   
 
     CNProcessorType:
       type: string
